realizado ejercicio 7.5 de cliente

--- a/CLIENTE/2 EVAL/tema7/ejercicio7.5/tareas.json
+++ b/CLIENTE/2 EVAL/tema7/ejercicio7.5/tareas.json
@@ -8,7 +8,7 @@
     {
       "id": 2,
       "descripcion": "Preparar presentación",
-      "estado": "en progreso",
+      "estado": "completada",
       "fechaVencimiento": "2024-02-15"
     },
     {
